# cookiecutter-collabora

./: .gitignore  404.html  LICENSE.md  README.md  commit_message_generator.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
0.1/: 404.html  index.html  sitemap.xml
0.1/search/: search_index.json
api-reference/: index.html
api-reference/toc-api-reference/: index.html
docs/: index.md
docs/api-reference/: toc-api-reference.md
docs/explanation/: mypy-configuration-guide.md  pytest-configuration-guide.md  toc-explanation.md
docs/getting-started/: config_files_guidelines.md  purpose_and_vision.md  resource_compilation.md  software-development-best-practices.md  software-development-lifecycle.md  standards_summary.md  usage.md
docs/how-to-guides/: automating-wandb-backups.md  branching-strategy.md  code-review-best-practices.md  cofig-files.md  column-naming-conventions.md  commit-message-standards-ml.md  data-conversion-from-xlsx-to-csv.md  data_management_practices.md  docstrings-and-inline-commentaries.md  error-handling-and-logging.md  file-naming-conventions.md  git-branch-naming-standards.md  input-validation-with-pydantic.md  introduction-to-doctest.md  jira-story-best-practices.md  jupyter-vscode-directory.md  lifecycle-git-github.md  notebook-to-production.md  offline-cookiecutter-setup.md  pre-commit-hooks-guide.md  project-scaffolding-standards.md  pushing-to-githug-best-practices.md  pytest-inroduction-guide.md  python-docstrings-conventions.md  python-line-lenght-standards.md  python-oop-for-ml.md  templates.md  toc-how-to-guides.md  type-checking-mypy.md  using-code-tags.md  using-todo-tree-with-code-tags.md  wandb-experiment-tracking-rag-advanced.md  wandb-experiment-tracking-rag.md
docs/stylesheets/: extra.css
docs/tutorials/: black-formatter.md  ruff-linter.md  toc-tutorials.md  vscode-settings.md
explanation/: index.html
explanation/dvc-git-branches/: index.html
explanation/dvc-understanding-dvs/: index.html
explanation/effective-data-documentation/: index.html
explanation/explanation/: index.html
explanation/github-naming-conventions/: index.html
explanation/ml-naming-conventions/: index.html
explanation/model-persistence-naming-conventions/: index.html
explanation/mypy-configuration-guide/: index.html
explanation/naming-conventions/: index.html
explanation/pytest-configuration-guide/: index.html
explanation/toc-explanation/: index.html
getting-started/config_files_guidelines/: index.html
getting-started/purpose_and_vision/: index.html
getting-started/resource_compilation/: index.html
getting-started/software-development-best-practices/: index.html
getting-started/software-development-lifecycle/: index.html
getting-started/standards_summary/: index.html
getting-started/usage/: index.html
how-to-guides/automating-wandb-backups/: index.html
how-to-guides/branching-strategy/: index.html
how-to-guides/code-review-best-practices/: index.html
how-to-guides/cofig-files/: index.html
how-to-guides/column-naming-conventions/: index.html
how-to-guides/commit-message-standards-ml/: index.html
how-to-guides/data-conversion-from-xlsx-to-csv/: index.html
how-to-guides/data_management_practices/: index.html
how-to-guides/docstrings-and-inline-commentaries/: index.html
how-to-guides/dvc-communication/: index.html
how-to-guides/dvc-set-up/: index.html
how-to-guides/dvc-vscode-extension/: index.html
how-to-guides/error-handling-and-logging/: index.html
how-to-guides/file-naming-conventions/: index.html
how-to-guides/git-branch-naming-standards/: index.html
how-to-guides/github-actions-naming-convention/: index.html
how-to-guides/how-to-guides-intro/: index.html
how-to-guides/input-validation-with-pydantic/: index.html
how-to-guides/introduction-to-doctest/: index.html
how-to-guides/jira-story-best-practices/: index.html
how-to-guides/jupyter-vscode-directory/: index.html
how-to-guides/lifecycle-git-github/: index.html
how-to-guides/machine-learning-metadata-automation/: index.html
how-to-guides/metadata-integration-data-analysis/: index.html
how-to-guides/ml-data-folder-naming/: index.html
how-to-guides/ml-data-naming-conventions/: index.html
how-to-guides/notebook-to-production/: index.html
how-to-guides/offline-cookiecutter-setup/: index.html
how-to-guides/pre-commit-hooks-guide/: index.html
how-to-guides/project-scaffolding-standards/: index.html
how-to-guides/pushing-to-githug-best-practices/: index.html
how-to-guides/pytest-inroduction-guide/: index.html
how-to-guides/python-docstrings-conventions/: index.html
how-to-guides/python-line-lenght-standards/: index.html
how-to-guides/python-oop-for-ml/: index.html
how-to-guides/templates/: index.html
how-to-guides/toc-how-to-guides/: index.html
how-to-guides/type-checking-mypy/: index.html
how-to-guides/using-code-tags/: index.html
how-to-guides/using-todo-tree-with-code-tags/: index.html
how-to-guides/wandb-experiment-tracking-rag/: index.html
how-to-guides/wandb-experiment-tracking-rag-advanced/: index.html
search/: search_index.json
tutorials/black-formatter/: index.html
tutorials/creating-managing-metadata-documentation/: index.html
tutorials/data/: index.html
tutorials/data-version-control/: index.html
tutorials/dvc-cloud/: index.html
tutorials/dvc-collaboration/: index.html
tutorials/dvc-local/: index.html
tutorials/gitignore/: index.html
tutorials/hydra-config/: index.html
tutorials/markdown-ml-model-documentation/: index.html
tutorials/mkdocs-docs/: index.html
tutorials/model-persistence/: index.html
tutorials/naming-conventions/: index.html
tutorials/poetry/: index.html
tutorials/ruff-linter/: index.html
tutorials/toc-tutorials/: index.html
tutorials/turorials-intro/: index.html
tutorials/vscode-settings/: index.html
tutorials/windows-os-setup/: index.html
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
(+85 files in other folders)
