[tool.poetry]
name = "cookiecutteraiflock"
version = "0.1.0"
description = "A Cookiecutter template for AI projects"
authors = ["Marcos Aguilera Keyser <marcosak@gmail.com>"]
license = "MIT"
readme = "README.md"

#  Packages necessary for the application to run in both development and
#  production environments
[tool.poetry.dependencies]
python = ">=3.10.13,<3.12"


# Packages only necessary for development and should not be included in
# the production environment
python-dotenv = "^1.0.1"
[tool.poetry.dev-dependencies]
black = { version = "23.7.0", extras = ["jupyter"] }
hydra-core = "1.3.2"
ipykernel = "6.24.0"
mkdocs = "1.5.3"
mkdocs-git-revision-date-localized-plugin = "1.2.2"
mkdocs-material = "9.5.4"
mkdocs-mermaid2-plugin = "1.1.1"
mkdocstrings-python = "1.8.0"
pre-commit = "3.7.1"
pymarkdownlnt = "0.9.13.4"
pytest = "7.4.0"
pytest-benchmark = "4.0.0"
pytest-xdist = "3.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
rope = "1.9.0"
ruff = "0.4.9 "
dvc = "3.40.1"
scikit-learn = "^1.4.1.post1"
toml = "^0.10.2"
nbconvert = "^7.8.0"
spacy = "^3.7.4"
spacy-transformers = "1.3.4"
torch = "2.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.2"
notebook = "^7.1.3"
chardet = "^5.2.0"
pydoc-markdown = "4.8.2"
mypy = "1.10.0"
types-toml = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '''
(
    \.pyi?$
  | \.ipynb$
)
'''

[tool.ruff]
line-length = 79
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
select = [
    # Pyflakes (F) rules
    "F401", # Unused imports
    "F402", # Import shadowed by loop var
    "F403", # `from module import *` used
    "F405", # Name may be undefined, or defined from star imports
    "F601", # Dictionary key literal repeated
    "F602", # Dictionary key variable repeated
    "F621", # Too many expressions in star-unpacking assignment
    "F631", # Assert test is a non-empty tuple
    "F632", # Use `==` to compare constant literals
    "F701", # `break` outside loop
    "F702", # `continue` not properly in loop
    "F704", # Yield statement outside of a function
    "F706", # `return` statement outside of a function/method
    "F707", # `except` block not the last exception handler
    "F722", # Syntax error in forward annotation
    "F811", # Redefinition of unused variable from line
    "F821", # Undefined name
    "F841", # Local variable is assigned to but never used

    # pycodestyle (E, W) rules
    "E101", # Indentation contains mixed spaces and tabs
    "E111", # Indentation is not a multiple of four
    "E112", # Expected an indented block
    "E113", # Unexpected indentation
    "E114", # Indentation is not a multiple of four (comment)
    "E115", # Expected an indented block (comment)
    "E116", # Unexpected indentation (comment)
    "E117", # Over-indented (comment)
    "E201", # Whitespace after '(' or '['
    "E202", # Whitespace before ')' or ']'
    "E203", # Whitespace before ':'
    "E211", # Whitespace before '(' or '['
    "E225", # Missing whitespace around operator
    "E231", # Missing whitespace after ',', ';', or ':'
    "E251", # Unexpected spaces around keyword / parameter equals
    "E261", # At least two spaces before inline comment
    "E262", # Inline comment should start with '# '
    "E265", # Block comment should start with '# '
    "E266", # Too many leading '#' for block comment
    "E271", # Multiple spaces after keyword
    "E272", # Multiple spaces before keyword
    "E273", # Tab after keyword
    "E274", # Tab before keyword
    "E275", # Missing whitespace after keyword
    "E401", # Multiple imports on one line
    "E402", # Module level import not at top of file
    "E501", # Line too long
    "E711", # Comparison to None should be 'expr is None'
    "E712", # Comparison to True should be 'if cond is True:' or 'if cond:'
    "E713", # Test for membership should be 'not in'
    "E714", # Test for object identity should be 'is not'
    "E721", # Do not compare types, use 'isinstance()'
    "E722", # Do not use bare 'except'
    "E731", # Do not assign a lambda expression, use a def

    # isort (I) rules
    "I001", # Import block is un-sorted or un-formatted
    "I002", # Missing required import

    # pep8-naming (N) rules
    "N801", # Class name should use CapWords convention
    "N802", # Function name should be lowercase
    "N803", # Argument name should be lowercase
    "N804", # First argument of a class method should be named 'cls'
    "N805", # First argument of a method should be named 'self'
    "N806", # Variable in function should be lowercase

    # pydocstyle (D) rules
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
]

[tool.pymarkdown]
disable-rules = ["MD046"]

[tool.coverage.run]
# Specify the source directory where your code resides
source = [
    "src/acroexpandpackage",
]
# Specify patterns to omit from coverage
omit = [
    "*/tests/*",
    "*/src/acroexpandpackage/utils.py",
    "*/src/acroexpandpackage/models/*",
    "*/src/acroexpandpackage/data/*",
    "*/src/acroexpandpackage/expander_demo.py",
    "*/src/acroexpandpackage/expander_example.py",
    "*/src/acroexpandpackage/__init__.py"
]

[tool.coverage.report]
# Specify lines to exclude from coverage report
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    'if __name__ == "__main__":',
]

[tool.pydoc-markdown]
search_path = ["src"]

[[tool.pydoc-markdown.loaders]]
type = "python"
modules = ["fpservicesagemodel.data_preprocessing.data_reader"]

[[tool.pydoc-markdown.renderers]]
type = "markdown"
toc = true  # Render table of contents
output_path = "data_reader.md"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_untyped_calls = true
ignore_missing_imports = true
